# git-tcr

./: Cargo.toml
src/: main.rs
tests/: run_command.rs
