[package]
name = "git-tcr"
version = "0.1.0"
authors = ["Eric Rochester <erochest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.11.1"
assert_fs = "0.11.3"
spectral = "0.6.0"
